# claudefront

./: BACKEND_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SDK_SUMMARY.md
backend/: .gitignore  Cargo.toml  README.md  build.rs
backend/src/: main.rs
backend/src/game/: ai.rs  combat.rs  map_gen.rs  mod.rs  state.rs
backend/src/types/: entities.rs  messages.rs  mod.rs
backend/src/websocket/: handler.rs  mod.rs  session.rs
docs/: brief.md  brief_expanded.md  frontend_implementation.md  ui_improvements_done.md
frontend/: .gitignore  README.md  SDK_README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/api/models/: AIPersonality.ts  BuildingType.ts  ClientMessage.ts  CombatResult.ts  GameState.ts  GameStats.ts  NotificationLevel.ts  Player.ts  ServerMessage.ts  TerrainType.ts  Territory.ts
frontend/src/client/: GameWebSocketClient.ts  index.ts  useGameClient.tsx
frontend/src/components/: ConnectionStatus.tsx  ControlPanel.tsx  GameMap.tsx  NotificationCenter.tsx  PlayerStats.tsx
frontend/src/styles/: App.css  ConnectionStatus.css  ControlPanel.css  GameMap.css  NotificationCenter.css  PlayerStats.css  index.css
